# CheckList

./: .env.dev.sample  .env.example  .env.prod.example  .gitignore  AUTHENTICATION_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  FIREBASE_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_DESCRIPTION.md  PR_GITHUB_INTEGRATION.md  QUICKSTART.md  README.md  SETUP_SECRETS.md  TODO.md  firebase.json  pubspec.yaml
android/app/: google-services.json.sample
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: checkbox_selector.xml
android/app/src/main/res/layout/: task_item.xml  widget_large.xml  widget_layout.xml  widget_medium.xml  widget_small.xml
api_server/: .env.example  README.md  environment.yml  pubspec.yaml  pyproject.toml  setup.sh
api_server/app/: config.py  main.py
api_server/app/models/: task.py
api_server/app/routers/: auth.py  tasks.py  users.py
api_server/app/utils/: logging.py
config/env/: .env.dev.example  .env.example  .env.prod.sample  .env.sample
dataconnect/: dataconnect.yaml
dev-api/: .env.example  .gitignore  README.md  pyproject.toml
dev-api/app/: __init__.py  config.py  main.py
dev-api/app/database/: firestore.py
dev-api/app/dependencies/: auth.py  jwt_middleware.py
dev-api/app/middleware/: jwt_auth.py  logging.py  rate_limiting.py
dev-api/app/models/: __init__.py  attachment.py  auth.py  consent.py  task.py  user.py
dev-api/app/routers/: attachments.py  auth.py  consent.py  status.py  tasks.py
dev-api/app/services/: attachment_service.py  email_service.py  firestore_service.py  google_oauth_service.py  rate_limiter.py  task_service.py
dev-api/app/utils/: logging.py  security.py
ios/: GoogleService-Info.plist
ios/Runner/: GoogleService-Info.plist.sample  Runner.entitlements
ios/TodoWidgets/: Info.plist  TodoWidgets.swift
lib/: firebase_options.dart.sample  main.dart
lib/config/: environment_config.dart
lib/dataconnect_generated/: README.md  example.dart
lib/models/: category.dart  category.freezed.dart  category.g.dart  github_repository.dart  linked_provider.dart  linked_provider.freezed.dart  linked_provider.g.dart  note.dart  note.freezed.dart  note.g.dart  task.dart  task.freezed.dart  task.g.dart  user.dart  user.freezed.dart  user.g.dart  workspace_data.dart  workspace_data.freezed.dart  workspace_data.g.dart
lib/providers/: github_providers.dart  task_providers.dart
lib/repositories/: base_repository.dart  firebase_task_repository.dart  task_repository.dart  user_repository.dart
lib/screens/: auth_wrapper.dart  home_screen.dart  login_screen.dart
lib/services/: account_linking_service.dart  auth_service.dart  desktop_service.dart  firebase_task_service.dart  firestore_service.dart  github_service.dart  github_sync_manager.dart  secure_storage_service.dart  widget_service.dart
lib/themes/: adaptive_components.dart  app_theme.dart  design_tokens.dart  responsive_layout.dart  theme_config.dart  theme_provider.dart  themes.dart
lib/utils/: color_accessibility.dart  database_helper.dart  platform_utils.dart  system_theme_detector.dart  theme_transitions.dart
lib/viewmodels/: task_viewmodel.dart
lib/views/: account_linking_screen.dart  desktop_settings_screen.dart  github_integration_screen.dart  material3_demo_view.dart  settings_view.dart  task_list_view.dart  widget_management_screen.dart
lib/widgets/: create_task_dialog.dart  masonry_task_grid.dart  task_card.dart
linux/: CMakeLists.txt  com.aigamer.checklist.desktop  postinst  prerm
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
test/: widget_test.dart
web/: index.html  manifest.json
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+6 files in other folders)
